<resources>
    <string name="facebook_application_id" translatable="false">180276049110543</string>
    <string name="owner_email" translatable="false">app@swipr.dk</string>

    <string name="app_name">Swipr</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="create_account">Create account</string>
    <string name="login_with_swipr">Login with Swipr</string>
    <string name="let_me_in"><u>I want to see what\'s inside, just let me in for now</u></string>
    <string name="warning">Warning</string>
    <string name="error_unknown">An error occurred. Please try again.</string>
    <string name="error_internet_connection">Please check your Internet connection</string>
    <string name="error_app_not_found">Could not find an application for this action</string>
    <string name="create_profile">Create profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="optional">Optional</string>
    <string name="continue_registration">Continue</string>
    <string name="by_pressing_terms">By pressing continue you accept our\n<u>terms &amp; conditions</u></string>
    <string name="enter_first_name">Please enter your first name</string>
    <string name="enter_last_name">Please enter your last name</string>
    <string name="enter_email">Please enter your valid email</string>
    <string name="enter_password">Password must be no less than 6 signs</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove_current_photo">Remove current photo</string>
    <string name="cancel">Cancel</string>
    <string name="device_doesnt_have_camera">Could not find device camera</string>
    <string name="please_grant_us_a_permission_gallery">Please grant us a permission to use your gallery</string>
    <string name="please_grant_us_a_permission_camera">Please grant us a permission to use your camera</string>
    <string name="couldnot_find_apps_for_this_action">Could not find any apps for this action</string>
    <string name="error">Error</string>
    <string name="file_could_not_be_opened">File could not be opened</string>
    <string name="photo_could_not_be_taken">Photo could not be taken</string>
    <string name="login">Login</string>
    <string name="store">Store</string>
    <string name="sell">Sell</string>
    <string name="messages">Messages</string>
    <string name="favourites">Favourites</string>
    <string name="faq">FAQ</string>
    <string name="about_swipr">About Swipr</string>
    <string name="regards_the_swipr_team">Regards,\nThe Swipr team</string>
    <string name="button_for_show">This button is really just for show.</string>
    <string name="settings_text">We have strived to make this app as easy as absolutely possible.\n\n
        If you miss any settings here, please mail us by clicking anywhere on this screen and we will listen to you.\n\n
        Thanks.</string>
    <string name="about">About</string>
    <string name="getting_started">Getting started</string>
    <string name="you_can_swipe_back">You can swipe back with SWIPR +</string>
    <string name="kr">kr.</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="add_product_type_hint">Type e.g. shoes, shirts, trousers</string>
    <string name="choose_brand">Choose brand</string>
    <string name="add_brand_hint">Type e.g. Adidas, Reebok, Bertoni</string>
    <string name="choose_size">Choose size</string>
    <string name="pictures">Pictures</string>
    <string name="contact_info">Contact info</string>
    <string name="how_can_buyers_contact">How can buyers\ncontact you?</string>
    <string name="street">Street</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="post_code">Post code</string>
    <string name="city">City</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="remove_photo">Remove photo?</string>
    <string name="this_photo_already_added">This photo already added</string>
    <string name="add_at_least_one_photo">Please add at least one photo</string>
    <string name="set_product_type">Please select product type</string>
    <string name="set_brand">Please select the brand of your product</string>
    <string name="set_size">Please select the size of your product</string>
    <string name="add_photo">Please add some photo of your product</string>
    <string name="add_contacts">Please add your contacts</string>
    <string name="send_product_for_review">Send new product for review</string>
    <string name="send_brand_for_review">Send new brand for review</string>
    <string name="text_goes_here">Text goes here...</string>
    <string name="price">Price</string>
    <string name="how_does_it_look">How does it look?</string>
    <string name="more_visibility">More visibility?</string>
    <string name="seven_days">7 days</string>
    <string name="or">or</string>
    <string name="swipr_plus">Swipr +</string>
    <string name="plus_dialog_point_1">Ubegrænset antal salgsannoncer</string>
    <string name="plus_dialog_point_2">Mere synlighed i lokalområdet</string>
    <string name="plus_dialog_point_3">Mere synlighed indenfor samme kategori</string>
    <string name="plus_dialog_point_4">50% på alle tilkøb til annoncer</string>
    <string name="plus_dialog_point_5">Fortryd sidste swipe</string>
    <string name="plus_dialog_point_6">Virtuel high five fra hele SWIPR teamet :)</string>
    <string name="plus_membership">SWIPR+ membership</string>
    <string name="set_price">Please set the price</string>
    <string name="sell_discard">You are about to discard this product. Do you want to proceed?</string>
    <string name="couldnt_retrieve_attached_file">Could not retrieve the file</string>
    <string name="add_description">Please add the description</string>
    <string name="uploading_product_to_server">Uploading product to the server</string>
    <string name="uploading_photo">Uploading photo</string>
    <string name="from">from</string>
    <string name="success">Success</string>
    <string name="product_added_to_the_store">Product added to the store</string>
    <string name="pictures_and_contact_info"><![CDATA[Pictures & Contact info]]></string>
    <string name="choose_category">Choose category</string>
    <string name="select_category">Please select the category of your product</string>
    <string name="add_tags">Add tags</string>
    <string name="plus_add_tag">+ Add tag</string>
    <string name="tag">Tag</string>
    <string name="take_photos">Take photos</string>
    <string name="describe_your_product">Describe your product</string>
    <string name="sign_in_to_make_this_action">Please sign in to make this action</string>
    <string name="user_since">User since</string>
    <string name="compressing_photo">Compressing photo</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="items_sold">Items sold</string>
    <string name="items_purchased">Items purchased</string>
    <string name="active_posts">Active posts</string>
    <string name="active_bids">Active bids</string>
    <string name="valid_until">Valid until</string>
    <string name="created">Created</string>
    <string name="delete_product">You are about to delete this post. Continue?</string>
    <string name="share_post">Share post</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="mail">Mail</string>
    <string name="message">Message</string>
    <string name="copy_link">Copy link</string>
    <string name="link_copied">Link has been copied to clipboard</string>
    <string name="search_here">Search here</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="follow">Follow</string>
    <string name="member_since">Member since</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="new_message">New message</string>
    <string name="at">At</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="this_tag_already_added">This tag already added</string>
    <string name="delete_chat_room">You are about to delete this chat room. Continue?</string>
    <string name="me">Me</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="you_will_be_charged"></string>
    <string name="in_transaction_fee"></string>
    <string name="place_bid">Place bid</string>
    <string name="include_shipping">With shipping</string>
    <string name="set_timer">Set timer</string>
    <string name="write_message">Write message</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="hr">hr</string>
    <string name="your_bid_overview">Your bid overview</string>
    <string name="bid_cannot_be_less_or_more">Your bid should not be 50% less or more than price</string>
    <string name="bid_was_sent">Your bid was sent to the seller</string>
    <string name="bid_was_sent_text">If the seller accept your bid, you will get a notification.\n\nVery good incentive to buy!</string>
    <string name="don_t_show_this_message_again">Do not show this message again</string>
    <string name="decline">Decline</string>
    <string name="attach_message">Attach\nmessage</string>
    <string name="attach_message_2">Attach message</string>
    <string name="expired">Expired</string>
    <string name="bid_has_expired_cancel">This bid has expired. You can not cancel it</string>
    <string name="bid_has_expired_decline">This bid has expired. You can not decline it</string>
    <string name="no_items">No products according to your filter</string>
    <string name="you_have_active_bid">Your current bid is active</string>
    <string name="new_bid">New bid</string>
    <string name="the_bid_declined">The bid has been declined</string>
    <string name="the_bid_accepted">The bid has been accepted</string>
    <string name="bid_cancelled">The bid has been cancelled</string>
    <string name="new_notifications">new notifications</string>
    <string name="rating_already_provided">Rating already left</string>
    <string name="leave_rating">Leave the rating</string>
    <string name="error_already_added_to_fav">Product already added to the favourites</string>
    <string name="no_favorites">You have not added any announces to the favourites</string>
    <string name="address_not_found">Address not found</string>
    <string name="error_purchase">Purchase is failed. Please try again</string>
    <string name="you_have_accepted_bid">Your bid is accepted by the seller. Go to chat with seller to get more info.</string>
</resources>
