<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bck_dialog"
        android:elevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:background="@drawable/selector_image_dark"
                android:padding="8dp"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/plusYellow"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/plus_membership"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_plus_point_star"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="16dp"
                android:text="@string/plus_dialog_point_1"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_plus_point_star"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="4dp"
                android:text="@string/plus_dialog_point_2"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_plus_point_star"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="4dp"
                android:text="@string/plus_dialog_point_3"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_plus_point_star"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="4dp"
                android:text="@string/plus_dialog_point_4"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_plus_point_star"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="4dp"
                android:text="@string/plus_dialog_point_5"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_plus_point_star"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="4dp"
                android:text="@string/plus_dialog_point_6"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small" />

            <View
                android:id="@+id/sizer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1" />
        </LinearLayout>

        <dk.techtify.swipr.view.PlusHandView
            android:id="@+id/hand"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</FrameLayout>