<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bck_dialog"
        android:elevation="12dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp"
            android:text="@string/share_post"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/text_medium" />

        <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1">-->

        <!--<dk.techtify.swipr.view.ProductPreview-->
        <!--android:id="@+id/preview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_margin="24dp" />-->

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            app:columnCount="2"
            app:orientation="horizontal">

            <TextView
                android:id="@+id/whatsapp"
                android:background="@drawable/selector_item_dark"
                android:clickable="true"
                android:drawableTop="@drawable/ic_share_whatsapp"
                android:gravity="center"
                android:paddingTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/whatsapp"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/facebook"
                android:background="@drawable/selector_item_dark"
                android:clickable="true"
                android:drawableTop="@drawable/ic_share_facebook"
                android:gravity="center"
                android:paddingTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/facebook"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/mail"
                android:background="@drawable/selector_item_dark"
                android:clickable="true"
                android:drawableTop="@drawable/ic_share_mail"
                android:gravity="center"
                android:paddingTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/mail"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/message"
                android:background="@drawable/selector_item_dark"
                android:clickable="true"
                android:drawableTop="@drawable/ic_share_message"
                android:gravity="center"
                android:paddingTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/message"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/copy"
                android:background="@drawable/selector_item_dark"
                android:clickable="true"
                android:drawableTop="@drawable/ic_share_copy"
                android:gravity="center"
                android:paddingTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/copy_link"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_small"
                app:layout_columnSpan="2"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

        </android.support.v7.widget.GridLayout>
        <!--</FrameLayout>-->

        <ImageButton
            android:id="@+id/positive"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/bck_btn_dialog"
            android:src="@drawable/ic_done" />

    </LinearLayout>
</FrameLayout>