<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_smile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="24dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="32dp"
                    android:text="@string/button_for_show"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="24dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/settings_text"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="12dp"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:text="@string/regards_the_swipr_team"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_regular" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/selector_image_dark"
        android:clickable="true"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/colorPrimary" />
</FrameLayout>